# ffmpeg_example_linux

./: CMakeLists.txt  README.md  VideoCapture.cpp  VideoCapture.hpp  main.cpp
cmake/: Dependencies.cmake
cmake/Modules/: FindFFmpeg.cmake
examples/: CMakeLists.txt  read_video.cpp
src/: CMakeLists.txt
